# AOC

./: .gitignore  README.md
2022/rust/: README.md  helix.adoc
2022/rust/day-01/: Cargo.toml
2022/rust/day-02/: .gitignore
2022/rust/day-02/src/: lib.rs
2022/rust/day-03/: Cargo.toml
2022/rust/day-03/src/: lib.rs
2022/rust/day-04/src/: lib.rs
2022/rust/day-05/src/: lib.rs
2022/rust/day-06/: Cargo.toml
2022/rust/day-06/.fleet/: run.json
2022/rust/day-06/src/: lib.rs
2023/day2/a/: main.c
2024/rust/: Cargo.toml  config.toml  learned.md  perf.data  perf.data.old
2024/rust/src/: main.rs  util.rs
2024/rust/src/days/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
2024/rust/tests/: test.rs
AOC/2022/rust/: README.md
AOC/2022/rust/day-02/: Cargo.toml
AOC/2022/rust/day-03/: Cargo.toml
AOC/2022/rust/day-04/: Cargo.toml
AOC/2023/day1/: notes.md
AOC/2023/day1/a/: br.sh  (+2 more)
AOC/2024/day_1/: ;  main  main.c
AOC/2024/rust/: .gitignore  .prettierrc  :w  Cargo.toml  README.md  learned.md  perf.data
AOC/2024/rust/benches/: day01.rs
AOC/2024/rust/inputs/: test_input_day02.txt  test_input_day04.txt
AOC/2024/rust/src/: day01.rs  main.rs  util.rs
AOC/2024/rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
AOC/2024/rust/tests/: day01.rs  test.rs
AOC/day_10/: 2
AOC/day_10/src/: main.rs
AOC/day_5/src/: main.rs  main.rs.html  parse.rs  transpose.rs
AOC/day_6/src/: find_marker.rs  main.rs
AOC/day_8/: Cargo.toml
AOC/day_8/src/: grid.rs  main.rs  part1.rs  part_2.rs  part_2_refactored.rs
AOC/practice/src/: main.rs
(+20 files in other folders)
