[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "aoc_2024"
# path = "src/lib.rs"

[profile.release]
incremental = true
debug = true
lto = "fat"
split-debuginfo = 'unpacked'  # optional, keeps symbols readable

# [build]
# rustflags = [
#     "-C", "force-frame-pointers=yes",
#     "-C", "symbol-mangling-version=v0"
# ]
