[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "aoc_2024"
# path = "src/lib.rs"

[profile.release]
incremental = true
debug = 1           # Include line table info
strip = false       # Don't strip symbols
lto = "fat"
split-debuginfo = 'unpacked'  # optional, keeps symbols readable

[build]
rustflags = ["-Csymbol-mangling-version=v0"]
